# Lexora

./: README.md
Landing/: DEPLOYMENT.md  netlify.toml  next-intl.config.js  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
Landing/assets/icons/: MainIcons.tsx
Landing/assets/lottie/: comparison.json  research.json  risk.json
Landing/messages/: en.json  ru.json  uz.json
Landing/public/: robots.txt  sitemap.xml
Landing/src/app/: globals.css  styles.css
Landing/src/app/[locale]/: layout.tsx  page.tsx
Landing/src/components/: Cta.tsx  DemoModal.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  JoinUs.tsx  LanguageSelector.tsx  LoginModal.tsx  Partners.tsx  Promise.tsx  SignupModal.tsx  SuccessJourneys.tsx  TrustedBy.tsx  Vision.tsx  WaitlistModal.tsx
Landing/src/i18n/: routing.ts
lexora-ai/: .env.example  .gitignore  README.md  pyproject.toml
lexora-ai/app/: main.py
lexora-ai/app/agents/: consultation_agent.py  research_agent.py
lexora-ai/app/api/v1/: consultation.py  research.py
lexora-ai/app/core/: config.py  configuration.py  consultation_engine.py  research_agent.py
lexora-ai/app/schemas/: chat.py  consultation_state.py  research_state.py
lexora-ai/app/tools/: consultation_tools.py  document_parser.py  legal_search_service.py  research_tools.py
lexoraui/: package-lock.json  package.json
lexoraui/src/app/: layout.tsx  page.tsx
lexoraui/src/components/: ArtifactRenderer.tsx  ChatInterface.tsx  MessageRenderer.tsx  ResearchInterface.tsx  Sidebar.tsx  SourceApproval.tsx
lexoraui/src/lib/: api.ts
(+5 files in other folders)
